src/test/ui/issues/issue-43623.stderr
error[E0631]: type mismatch in function arguments
  --> $DIR/issue-43623.rs:14:5
   |
LL | pub fn break_me<T, F>(f: F)
   |        -------- required by a bound in this
LL | where T: for<'b> Trait<'b>,
LL |       F: for<'b> FnMut(<T as Trait<'b>>::Assoc) {
   |          -------------------------------------- required by this bound in `break_me`
LL |     break_me::<Type, fn(_)>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     expected signature of `for<'b> fn(<Type as Trait<'b>>::Assoc) -> _`
   |     found signature of `fn(_) -> _`

error[E0271]: type mismatch resolving `for<'b> <fn(_) as std::ops::FnOnce<(<Type as Trait<'b>>::Assoc,)>>::Output == ()`
  --> $DIR/issue-43623.rs:14:5
   |
LL | pub fn break_me<T, F>(f: F)
   |        -------- required by a bound in this
LL | where T: for<'b> Trait<'b>,
LL |       F: for<'b> FnMut(<T as Trait<'b>>::Assoc) {
   |                  ------------------------------ required by this bound in `break_me`
LL |     break_me::<Type, fn(_)>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^ expected bound lifetime parameter 'b, found concrete lifetime

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0271, E0631.
For more information about an error, try `rustc --explain E0271`.
